PPL-Sources/PPL-FE/src/test/resources/CoCos/Valid/ListMustBeInitialized.par
ListMustBeInitialized {


seq test(): [Int]  {
  return [1]
}

seq main() : Void {
    var [Int] a = [1]
    var [Int] b

    b = init_List([1])

    a = test()
    b = test()

}
}