PPL-Sources/PPL-FE/src/test/resources/CoCos/Invalid/ListMustBeInitialized2.par
ListMustBeInitialized2 {

seq main() : Void {
    var [Int] a = [1]
}

seq test(): [Int]  {
  return [1]
}

seq test2(): Void  {
  var [Int] a = test()
}
}